Scrollbar issue #168

--- a/frontend/src/styles/pages/pages.scss
+++ b/frontend/src/styles/pages/pages.scss
@@ -21,6 +21,7 @@ html, body {
   height: 100%;
   padding: 70px 20px 0;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .ct-page-container {
